--- a/landingPage.html
+++ b/landingPage.html
@@ -26,8 +26,34 @@
 
 
     <aside>
-        <a>Aside</a>
+        <div class="buscador">
+            <input class="buscadorInput" type="text" placeholder="Buscar">
+        </div>
 
+        <div class="enlacesAside">
+            <div class="enlaceAside">
+                <a href="#" class="iconosAside"><img class="iconosAside" src="assets/home.png" /></a>
+                <a href="#" class="enlaceAzulAside">Tu perfil</a>
+            </div> 
+            <div class="enlaceAside">
+                <a href="catalogo.html" class="iconosAside"><img class="iconosAside" src="assets/catalogo.png" /></a>
+                <a href="catalogo.html" class="enlaceAzulAside">Catálogo</a>
+            </div> 
+            <div class="enlaceAside">
+                <a href="developer.html" class="iconosAside"><img class="iconosAside" src="assets/desarrolladores.png" /></a>
+                <a href="developer.html" class="enlaceAzulAside">Desarrollo</a>
+            </div> 
+
+        </div>
+
+        <div class="perfil">
+            <div class="profile">
+                <a href="#" class="profile"><img class="profile" src="assets/profile.png" /></a>
+            </div>
+            <div class="textoProfile">
+                <a href="#" class="textoProfile">Tu perfil</a>
+            </div>    
+        </div>
     </aside>
 
     <section>
