--- a/landingPage.html
+++ b/landingPage.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylelanding.css" />
     <meta charset="UTF-8" />
     <meta name="description" content="Práctica final para la asignatura de desarrollo web I" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
@@ -34,15 +35,16 @@
             <div class="enlaceAside">
                 <a href="#" class="iconosAside"><img class="iconosAside" src="assets/home.png" /></a>
                 <a href="#" class="enlaceAzulAside">Tu perfil</a>
-            </div> 
+            </div>
             <div class="enlaceAside">
                 <a href="catalogo.html" class="iconosAside"><img class="iconosAside" src="assets/catalogo.png" /></a>
                 <a href="catalogo.html" class="enlaceAzulAside">Catálogo</a>
-            </div> 
+            </div>
             <div class="enlaceAside">
-                <a href="developer.html" class="iconosAside"><img class="iconosAside" src="assets/desarrolladores.png" /></a>
+                <a href="developer.html" class="iconosAside"><img class="iconosAside"
+                        src="assets/desarrolladores.png" /></a>
                 <a href="developer.html" class="enlaceAzulAside">Desarrollo</a>
-            </div> 
+            </div>
 
         </div>
 
@@ -52,21 +54,74 @@
             </div>
             <div class="textoProfile">
                 <a href="#" class="textoProfile">Tu perfil</a>
-            </div>    
+            </div>
         </div>
     </aside>
 
     <section>
-        <a>Aqui iría el section</a>
+        <div class="appsImportantes">
 
+            <div class="carrusel">
+                <div class="tarjeta">
+                    <div class="textoTarjeta">
+                        <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
+                        <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
+                        <p class="textoGrisInfo">Te enseñamos el último OS</p>
+                    </div>
+                    <div class="imagenTarjeta">
+                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta1.png">
+                    </div>
+                </div>
+
+                <div class="tarjeta">
+                    <div class="textoTarjeta">
+                        <p class="textoGrisImportante">Increíble en Ventura</p>
+                        <p class="textoNegroTitulo">Atajos mejora tu productividad</p>
+                        <p class="textoGrisInfo">Descubre cómo aumentar el
+                            potencial de tus apps con Atajos</p>
+                    </div>
+                    <div class="imagenTarjeta">
+                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta2.png">
+                    </div>
+                </div>
+
+                <div class="tarjeta">
+                    <div class="textoTarjeta">
+                        <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
+                        <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
+                        <p class="textoGrisInfo">Te enseñamos el último OS</p>
+                    </div>
+                    <div class="imagenTarjeta">
+                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta3.png">
+                    </div>
+                </div>
+
+                <div class="tarjeta">
+                    <div class="textoTarjeta">
+                        <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
+                        <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
+                        <p class="textoGrisInfo">Te enseñamos el último OS</p>
+                    </div>
+                    <div class="imagenTarjeta">
+                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta1.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="listadoApps">
+            <p class="tituloNegroSection">Apps y juegos que nos encantan</p>
+        </div>
     </section>
 
     <footer>
         <div class="footerIzquierda">
             <div class="infoFooter">
-                <p class="textoFooter">Más formas de comprar: encuentra un <span class="enlaceAzul">Apple Store</span> o un <span class="enlaceAzul">distribuidor</span> cerca de ti. O llama al 000 000
+                <p class="textoFooter">Más formas de comprar: encuentra un <span class="enlaceAzul">Apple Store</span> o
+                    un <span class="enlaceAzul">distribuidor</span> cerca de ti. O llama al 000 000
                     000.</p>
-                    <p class="textoFooter">Copyright © 2022 Apple Inc. Todos los derechos reservados.</p>
+                <p class="textoFooter">Copyright © 2022 Apple Inc. Todos los derechos reservados.</p>
             </div>
             <div class="enlacesFooter">
                 <a href="#" class="textoFooter">Política de privacidad </a> <a> | </a>
@@ -87,4 +142,5 @@
         </div>
     </footer>
 </body>
+
 </html>
