Finalizada la landing

--- a/landingPage.html
+++ b/landingPage.html
@@ -59,60 +59,132 @@
     </aside>
 
     <section>
-        <div class="appsImportantes">
-
             <div class="carrusel">
                 <div class="tarjeta">
-                    <div class="textoTarjeta">
+                    <div class="textoTarjetaContainer">
                         <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
                         <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
                         <p class="textoGrisInfo">Te enseñamos el último OS</p>
                     </div>
-                    <div class="imagenTarjeta">
-                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta1.png">
+                    <div class="imagenTarjetaContainer">
+                        <img class="imagenTarjeta" src="assets/tarjeta1.png">
                     </div>
                 </div>
 
                 <div class="tarjeta">
-                    <div class="textoTarjeta">
-                        <p class="textoGrisImportante">Increíble en Ventura</p>
-                        <p class="textoNegroTitulo">Atajos mejora tu productividad</p>
-                        <p class="textoGrisInfo">Descubre cómo aumentar el
-                            potencial de tus apps con Atajos</p>
-                    </div>
-                    <div class="imagenTarjeta">
-                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta2.png">
-                    </div>
-                </div>
-
-                <div class="tarjeta">
-                    <div class="textoTarjeta">
+                    <div class="textoTarjetaContainer">
                         <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
                         <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
                         <p class="textoGrisInfo">Te enseñamos el último OS</p>
                     </div>
-                    <div class="imagenTarjeta">
-                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta3.png">
+                    <div class="imagenTarjetaContainer">
+                        <img class="imagenTarjeta" src="assets/tarjeta2.png">
                     </div>
                 </div>
 
                 <div class="tarjeta">
-                    <div class="textoTarjeta">
+                    <div class="textoTarjetaContainer">
                         <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
                         <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
                         <p class="textoGrisInfo">Te enseñamos el último OS</p>
                     </div>
-                    <div class="imagenTarjeta">
-                        <img class="imagenTarjeta" src="/AppStore/assets/tarjeta1.png">
+                    <div class="imagenTarjetaContainer">
+                        <img class="imagenTarjeta" src="assets/tarjeta3.png">
+                    </div>
+                </div>
+
+                <div class="tarjeta">
+                    <div class="textoTarjetaContainer">
+                        <p class="textoGrisImportante">ACTUALIZACIÓN IMPORTANTE</p>
+                        <p class="textoNegroTitulo">Las novedades de MacOS ventura</p>
+                        <p class="textoGrisInfo">Te enseñamos el último OS</p>
+                    </div>
+                    <div class="imagenTarjetaContainer">
+                        <img class="imagenTarjeta" src="assets/tarjeta1.png">
                     </div>
                 </div>
             </div>
-        </div>
 
+            <hr class="division">
 
-        <div class="listadoApps">
-            <p class="tituloNegroSection">Apps y juegos que nos encantan</p>
-        </div>
+            <div class="listadoApps">
+                <p class="tituloNegroSection">Apps y juegos que nos encantan</p>
+                <div class="containerApps">
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app1.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Final Cut Pro X</p>
+                            <p class="textoGrisImportanteApp">Edición de video profesional</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app2.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Kaleidoscope 3</p>
+                            <p class="textoGrisImportanteApp">Para desarrolladores </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app3.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Calendario escolar</p>
+                            <p class="textoGrisImportanteApp">Organiza tus tareas </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app4.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Zomato</p>
+                            <p class="textoGrisImportanteApp">Juego de cocina </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app1.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Final Cut Pro X</p>
+                            <p class="textoGrisImportanteApp">Edición de video profesional</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app2.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Kaleidoscope 3</p>
+                            <p class="textoGrisImportanteApp">Para desarrolladores </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app3.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Calendario escolar</p>
+                            <p class="textoGrisImportanteApp">Organiza tus tareas </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/app4.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Zomato</p>
+                            <p class="textoGrisImportanteApp">Juego de cocina </p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                    </div>
+                    
+                </div>
+            </div>
+   
     </section>
 
     <footer>
