Hecha la de developer y catalogo

--- a/developer.html
+++ b/developer.html
@@ -2,15 +2,149 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="description" content="Práctica final para la asignatura de desarrollo web I">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Álvaro García Pizarro">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylelanding.css" />
+    <meta charset="UTF-8" />
+    <meta name="description" content="Práctica final para la asignatura de desarrollo web I" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Álvaro García Pizarro" />
 </head>
 
 <body>
+    <header>
+        <div class="logoSpace">
+            <a href="landingPage.html" class="textoNav"><img class="logo" src="assets/Apple_logo_white.svg.png" /></a>
+        </div>
+        <div class="enlaces">
+            <a href="catalogo.html" class="textoNav">Catálogo</a>
+            <a href="catalogo.html" class="textoNav">Juegos</a>
+            <a href="catalogo.html" class="textoNav">Actualizaciones</a>
+        </div>
+        <div class="enlaceDerecha">
+            <a href="registroLogin.html" class="textoNavDerecha">Login/Registro</a>
+        </div>
+    </header>
 
+
+    <aside>
+        <div class="buscador">
+            <input class="buscadorInput" type="text" placeholder="Buscar">
+        </div>
+
+        <div class="enlacesAside">
+            <div class="enlaceAside">
+                <a href="#" class="iconosAside"><img class="iconosAside" src="assets/home.png" /></a>
+                <a href="#" class="enlaceAzulAside">Tu perfil</a>
+            </div>
+            <div class="enlaceAside">
+                <a href="catalogo.html" class="iconosAside"><img class="iconosAside" src="assets/catalogo.png" /></a>
+                <a href="catalogo.html" class="enlaceAzulAside">Catálogo</a>
+            </div>
+            <div class="enlaceAside">
+                <a href="developer.html" class="iconosAside"><img class="iconosAside"
+                        src="assets/desarrolladores.png" /></a>
+                <a href="developer.html" class="enlaceAzulAside">Desarrollo</a>
+            </div>
+
+        </div>
+
+        <div class="perfil">
+            <div class="profile">
+                <a href="#" class="profile"><img class="profile" src="assets/profile.png" /></a>
+            </div>
+            <div class="textoProfile">
+                <a href="#" class="textoProfile">Tu perfil</a>
+            </div>
+        </div>
+    </aside>
+
+    <section>
+
+            <div class="spaceApps">
+                <p class="textoGrisTitulo">Mis aplicaciones publicadas</p>
+                <br>
+                <div class="containerApps">
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/game5.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Boom Beach</p>
+                            <p class="textoGrisImportanteApp">8M de descargas <br>$43.654 in App</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/game2.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Clash of Clans</p>
+                            <p class="textoGrisImportanteApp">37M de descargas <br>$103.094 in App</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/game3.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Brawl Stars</p>
+                            <p class="textoGrisImportanteApp">28M de descargas <br>$93.140 in App</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    
+                    <div class="app">
+                        <div class="iconoAppContainer"><img src="assets/game6.png" class="iconoApp"></div>
+                        <div class="infoAppContainer">
+                            <p class="textoNegroTitulo">Hay Day</p>
+                            <p class="textoGrisImportanteApp">12M de descargas <br>$3.654 in App</p>
+                        </div>
+                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <hr class="divisionApps">
+                    </div>
+                    
+                </div>
+            </div>
+
+            <div class="spaceApps">
+                <p class="textoGrisTitulo">Panel de desarrollador</p>
+                <p class="textoGrisImportanteApp">Buenos días Álvaro, ¿Qué deseas consultar hoy?</p>
+                <br>
+                <div class="espacioBotones">
+                    <button type="button" class="botonOpciones"><a class="textoAzul">Nuevo Proyecto</a></button>
+                    <button type="button" class="botonOpciones"><a class="textoAzul">Nueva versión</a></button>
+                    <button type="button" class="botonOpciones"><a class="textoAzul">Solicitudes</a></button>
+                    <button type="button" class="botonOpciones"><a class="textoAzul">Mi catálogo</a></button>
+                </div>
+            </div>    
+   
+    </section>
+
+    <footer>
+        <div class="footerIzquierda">
+            <div class="infoFooter">
+                <p class="textoFooter">Más formas de comprar: encuentra un <span class="enlaceAzul">Apple Store</span> o
+                    un <span class="enlaceAzul">distribuidor</span> cerca de ti. O llama al 000 000
+                    000.</p>
+                <p class="textoFooter">Copyright © 2022 Apple Inc. Todos los derechos reservados.</p>
+            </div>
+            <div class="enlacesFooter">
+                <a href="#" class="textoFooter">Política de privacidad </a> <a> | </a>
+                <a href="#" class="textoFooter">Uso de Cookies </a> <a> | </a>
+                <a href="#" class="textoFooter">Condiciones de servicio </a> <a> | </a>
+                <a href="#" class="textoFooter">Ventas y reembolsos </a> <a> | </a>
+                <a href="#" class="textoFooter">Avisos legales </a> <a> | </a>
+                <a href="#" class="textoFooter">Mapa del sitio </a>
+            </div>
+        </div>
+        <div class="footerDerecha">
+            <div class="country">
+                <a href="landingPage.html" class="textoNav"><img class="country" src="assets/spain.png" /></a>
+            </div>
+            <div class="enlaces">
+                <a href="#" class="textoFooter">España</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
