Fin pantallas y enlaces

--- a/fichaApp.html
+++ b/fichaApp.html
@@ -66,7 +66,7 @@
             <div class="nombreApp">
                 <p class="textoNegroTitulo">Final Cut pro X</p>
                 <p class="textoGrisInfo"><br>Edición de video para profesionales</p>
-                <button class="botonPrecio"><a class="textoBlanco">23,99€</a></button>
+                <button class="botonPrecio"><a class="textoBlanco" href="purchaseForm.html">23,99€</a></button>
             </div>
         </div>
         <hr class="division" style="margin-bottom: 3px;">
