--- a/landingPage.html
+++ b/landingPage.html
@@ -111,75 +111,75 @@
                 <p class="tituloNegroSection">Apps y juegos que nos encantan</p>
                 <div class="containerApps">
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app1.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app1.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Final Cut Pro X</p>
                             <p class="textoGrisImportanteApp">Edición de video profesional</p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app2.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app2.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Kaleidoscope 3</p>
                             <p class="textoGrisImportanteApp">Para desarrolladores </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app3.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app3.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Calendario escolar</p>
                             <p class="textoGrisImportanteApp">Organiza tus tareas </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app4.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app4.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Zomato</p>
                             <p class="textoGrisImportanteApp">Juego de cocina </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
 
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app1.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app1.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Final Cut Pro X</p>
                             <p class="textoGrisImportanteApp">Edición de video profesional</p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app2.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app2.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Kaleidoscope 3</p>
                             <p class="textoGrisImportanteApp">Para desarrolladores </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                         <hr class="divisionApps">
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app3.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app3.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Calendario escolar</p>
                             <p class="textoGrisImportanteApp">Organiza tus tareas </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                     </div>
                     <div class="app">
-                        <div class="iconoAppContainer"><img src="assets/app4.png" class="iconoApp"></div>
+                        <div class="iconoAppContainer"><a href="fichaApp.html"><img src="assets/app4.png" class="iconoApp"></a></div>
                         <div class="infoAppContainer">
                             <p class="textoNegroTitulo">Zomato</p>
                             <p class="textoGrisImportanteApp">Juego de cocina </p>
                         </div>
-                        <div class="botonAppContainer textoDescargar">Descargar</div>
+                        <div class="botonAppContainer textoDescargar"><a href="fichaApp.html" class="url">Descargar</a></div>
                     </div>
                     
                 </div>
