--- a/searchForm.html
+++ b/searchForm.html
@@ -2,15 +2,172 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="description" content="Práctica final para la asignatura de desarrollo web I">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Álvaro García Pizarro">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styleSearch.css" />
+    <meta charset="UTF-8" />
+    <meta name="description" content="Práctica final para la asignatura de desarrollo web I" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Álvaro García Pizarro" />
 </head>
 
 <body>
+    <header>
+        <div class="logoSpace">
+            <a href="landingPage.html" class="textoNav"><img class="logo" src="assets/Apple_logo_white.svg.png" /></a>
+        </div>
+        <div class="enlaces">
+            <a href="catalogo.html" class="textoNav">Catálogo</a>
+            <a href="catalogo.html" class="textoNav">Juegos</a>
+            <a href="catalogo.html" class="textoNav">Actualizaciones</a>
+        </div>
+        <div class="enlaceDerecha">
+            <a href="registroLogin.html" class="textoNavDerecha">Login/Registro</a>
+        </div>
+    </header>
 
+
+    <aside>
+        <div class="buscador">
+            <input class="buscadorInput" type="text" placeholder="Buscar">
+        </div>
+
+        <div class="enlacesAside">
+            <div class="enlaceAside">
+                <a href="#" class="iconosAside"><img class="iconosAside" src="assets/home.png" /></a>
+                <a href="#" class="enlaceAzulAside">Tu perfil</a>
+            </div>
+            <div class="enlaceAside">
+                <a href="catalogo.html" class="iconosAside"><img class="iconosAside" src="assets/catalogo.png" /></a>
+                <a href="catalogo.html" class="enlaceAzulAside">Catálogo</a>
+            </div>
+            <div class="enlaceAside">
+                <a href="developer.html" class="iconosAside"><img class="iconosAside"
+                        src="assets/desarrolladores.png" /></a>
+                <a href="developer.html" class="enlaceAzulAside">Desarrollo</a>
+            </div>
+
+        </div>
+
+        <div class="perfil">
+            <div class="profile">
+                <a href="#" class="profile"><img class="profile" src="assets/profile.png" /></a>
+            </div>
+            <div class="textoProfile">
+                <a href="#" class="textoProfile">Tu perfil</a>
+            </div>
+        </div>
+    </aside>
+
+    <section class="containerSearch">
+        <div class="titulo">
+            <p class="textoNegroTitulo">Resultados para "Supercell"</p>
+        </div>
+
+        <div class="filtros">
+            <div class="dispositivo">
+                <button class="botonDispositivo">Apps para Mac</button>
+                <button class="botonDispositivo">Apps para iPhone y iPad</button>
+                <a class="textoAzul" style="font-weight: bold; font-size: 16px;vertical-align: middle;float: right;margin-right: 300px;">Filtros</a>
+            </div>
+            <hr class="division">
+            <div class="seleccionFiltros">
+                <div class="selector">
+                    <p class="textoGris">Precio</p>
+                    <p class="textoAzul">Cualquiera ✓</p>
+                    <hr class="division">
+                    <p class="textoAzul">Gratis</p>
+                </div>
+                <div class="selector">
+                    <p class="textoGris">Categoría</p>
+                    <p class="textoAzul">Cualquiera ✓</p>
+                    <hr class="division">
+                    <p class="textoAzul">Deportes</p>
+                    <hr class="division">
+                    <p class="textoAzul">Diseño Gráfico</p>
+                    <hr class="division">
+                    <p class="textoAzul">Economía y Empresa</p>
+                    <hr class="division">
+                    <p class="textoAzul">Más...</p>
+                </div>
+                <div class="selector">
+                    <p class="textoGris">Ordenar por:</p>
+                    <p class="textoAzul">Relevancia ✓</p>
+                    <hr class="division">
+                    <p class="textoAzul">Popularidad</p>
+                    <hr class="division">
+                    <p class="textoAzul">Valoraciones</p>
+                    <hr class="division">
+                    <p class="textoAzul">Fecha de publicación</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="resultados">
+            <div class="resultado">
+                <div class="info">
+                    <div class="logoApp">
+                        <img class="captura" alt="clashOfClans" src="assets/game2.png">
+                    </div>
+                    <div class="nombre">
+                        <p class="textoNegro">Clash of Clans</p>
+                        <p class="textoGris">Construya su aldea</p>
+                    </div>
+                    <div class="obtener">
+                        <button class="botonObtener"><a class="textoBlanco">Obtener</a></button>
+                    </div>
+                </div>
+                <div class="imagenes">
+                    <img class="captura" alt="clashOfClans" src="assets/clash.jpg">
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div class="info">
+                    <div class="logoApp">
+                        <img class="captura" alt="clashOfClans" src="assets/game3.png">
+                    </div>
+                    <div class="nombre">
+                        <p class="textoNegro">Brawl Stars</p>
+                        <p class="textoGris">Luche en equipo</p>
+                    </div>
+                    <div class="obtener">
+                        <button class="botonObtener"><a class="textoBlanco">Obtener</a></button>
+                    </div>
+                </div>
+                <div class="imagenes">
+                    <img class="captura" alt="clashOfClans" src="assets/brawl.jpg">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="footerIzquierda">
+            <div class="infoFooter">
+                <p class="textoFooter">Más formas de comprar: encuentra un <span class="enlaceAzul">Apple Store</span> o
+                    un <span class="enlaceAzul">distribuidor</span> cerca de ti. O llama al 000 000
+                    000.</p>
+                <p class="textoFooter">Copyright © 2022 Apple Inc. Todos los derechos reservados.</p>
+            </div>
+            <div class="enlacesFooter">
+                <a href="#" class="textoFooter">Política de privacidad </a> <a> | </a>
+                <a href="#" class="textoFooter">Uso de Cookies </a> <a> | </a>
+                <a href="#" class="textoFooter">Condiciones de servicio </a> <a> | </a>
+                <a href="#" class="textoFooter">Ventas y reembolsos </a> <a> | </a>
+                <a href="#" class="textoFooter">Avisos legales </a> <a> | </a>
+                <a href="#" class="textoFooter">Mapa del sitio </a>
+            </div>
+        </div>
+        <div class="footerDerecha">
+            <div class="country">
+                <a href="landingPage.html" class="textoNav"><img class="country" src="assets/spain.png" /></a>
+            </div>
+            <div class="enlaces">
+                <a href="#" class="textoFooter">España</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
